--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="MainStyleSheet.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
     <title> Module 2 Solution</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="device-width,initial-scale=1" >
